service-peccy-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-peccy-app
  labels:
    app: service-peccy-app
spec:
  replicas: 12
  selector:
    matchLabels:
      app: service-peccy-app
  template:
    metadata:
      labels:
        app: service-peccy-app
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: app-server
      containers:
      - name: service-peccy-app
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        volumeMounts:
        - name: tz-seoul
          mountPath: /etc/localtime
        - name: efs
          mountPath: /app/assets
      volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
        - name: efs
          persistentVolumeClaim:
            claimName: efs-pvc
