service-peccy-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-peccy-app
spec:
  type: NodePort
  selector:
    app: service-peccy-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
