service-peccy-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-peccy-app
  annotations:
    external-dns.alpha.kubernetes.io/alias: true
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: 5
spec:
  ingressClassName: alb
  rules:
  - host: peccy-api.aws-playground.dev 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-peccy-app
            port:
              number: 80
